<resources>
    <string name="app_name">Workshop 3TI</string>
    <string name="charger">Load</string>
    <string name="login">Login</string>
    <string name="email_txt">Email</string>
    <string name="password_txt">Password</string>
    <string name="action_settings">Settings</string>
    <string name="language_default_value" translatable="false">en</string>
    <string name="search_distance_default_value">1000</string>
    <string name="app_language_pref" translatable="false">app_language_pref</string>
    <string name="search_distance_pref" translatable="false">search_distance_pref</string>
    <string name="offline_mode_pref" translatable="false">offline_mode_pref</string>
    <string name="search_distance_txt">Search Distance</string>
    <string name="app_language_txt">Application Language</string>
    <string name="action_refresh">Refresh</string>
    <string name="offline_mode_pref_txt">Offline Mode</string>
    <string name="search_distance_sum">Search distance for Pharmacies</string>
    <string name="offline_mode_sum">This option if selected will not allow connection to the internet</string>
    <string name="app_language_sum">Select the application language</string>
    <string-array name="language_list_array">
        <item>English</item>
        <item>Français</item>
        <item>العربية</item>
    </string-array>

    <string-array name="language_list_values">
        <item>en</item>
        <item>fr</item>
        <item>ar</item>
    </string-array>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
    <string name="load_img">Image</string>
    <string name="image">Image</string>
    <string name="drawer_txt">Drawer</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="call_txt">Call</string>
    <string name="location_txt">Location</string>
</resources>
